# cosmological-playground

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  Makefile  PROJECT_CHARTER.md  README.md  package-lock.json  package.json
.agent/: READINESS.md  RUN_REPORT_TEMPLATE.md  state.json
apps/web/: package.json
docs/: CONFIDENCE_AND_RANKING.md  COSMOLOGY_PRIMITIVES.md  SOURCE_PROVENANCE.md
evals/: README.md
knowledge/: sources.json
knowledge/cosmologies/: README.md  card.schema.json  manifest.json
knowledge/topics/: README.md  confidence-contract-gaps-v1.md  cosmological-orphaning.md  cosmology-values-relation.md  making-beliefs-pay-rent-findings.md  metaethics-extraction-rule.md  moral-realism-doctrine-profile.md  two-truths-relation-gap.md
knowledge/values/: README.md  manifest.json
reports/: CURRENT_STATUS.md
reports/dry-runs/: 2026-07-06_making-beliefs-pay-rent.md  2026-07-06_moral-realism-cosmological-profile.md  2026-07-07_cosmology-values-relation.md
reports/runs/: 2026-07-06_1211_OPS-001.md  2026-07-06_1257_D1-001.md  2026-07-06_1306_OPS-002.md  2026-07-06_1316_OPS-002.md  2026-07-06_1335_D1-002.md  2026-07-06_1350_D1-003.md  (+7 more)
scripts/: project.py  topics.py  validate_cards.py  values.py
services/api/: pyproject.toml
services/api/src/cosmology_api/: __init__.py  confidence.py  main.py
services/api/tests/: test_confidence_policy.py  test_health.py
tests/: test_cosmology_cards.py  test_ontology_contract.py  test_project_framework.py  test_source_registry.py  test_topics_store.py  test_values_store.py
(+27 files in other folders)
