[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmology-lens-api"
version = "0.1.0"
description = "Evidence-bearing cosmology analysis API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]==0.50.1",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "httpx==0.28.1",
  "trafilatura==2.1.0",
  "PyMuPDF==1.28.0",
  "python-docx==1.2.0",
  "tenacity==9.1.4"
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
